Fix anchor alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ img {
 
 .backToTop {
   max-width: 50px;
+  margin-bottom: 2rem;
 }
 
 
